--- a/WebApp/Views/Job/ViewJob.cshtml
+++ b/WebApp/Views/Job/ViewJob.cshtml
@@ -10,8 +10,8 @@
 }
 
 
-<div class="min-h-screen bg-gray-100 text-black">
-    <div class="bg-gray-100 max-w-7xl mx-auto rounded-lg px-6 mt-6 flex gap-6">
+<div class="min-h-screen bg-[#F5F7F8] text-black mt-12">
+    <div class="bg-[#F5F7F8] max-w-7xl mx-auto rounded-lg px-6 mt-6 flex gap-6">
         <div class="justify-between w-full">
 
             <div class="bg-white w-full px-12 p-6 rounded-lg shadow-sm">
