--- a/WebApp/Views/Job/IndexApplicant.cshtml
+++ b/WebApp/Views/Job/IndexApplicant.cshtml
@@ -104,7 +104,8 @@
                 {
                     @foreach (var job in Model)
                     {
-                        <div class="py-2">
+                        <div onclick="location.href='@Url.Action("GetJob", "Job", new { id = job.JobId })'"
+                             class="py-2 cursor-pointer">
                             <div class="rounded-xl bg-gray-100 p-1 shadow-md transition-shadow duration-300 hover:shadow-lg">
                                 <div class="rounded-xl bg-white px-3 py-2">
                                     <!-- Company and Date Created -->
