--- a/WebApp/Views/Job/InfoTab.cshtml
+++ b/WebApp/Views/Job/InfoTab.cshtml
@@ -17,18 +17,18 @@
     var role = HttpContextAccessor.HttpContext.User.FindFirst(System.Security.Claims.ClaimsIdentity.DefaultRoleClaimType)?.Value;
 }
 
-<div class="bg-white p-6 rounded-lg shadow-md border border-gray-200">
-    <div class="font-normal pb-2 text-sm flex justify-between items-center">
+<div class="rounded-lg border border-gray-200 bg-white p-6 shadow-md">
+    <div class="flex items-center justify-between pb-2 text-sm font-normal">
         <div>
             <i class="fas fa-map-marker-alt pr-1 text-sm"></i>
             @Model.Location
         </div>
 
         <!-- Status and Employment Type Badge -->
-        <div class="text-gray-900 justify-between">
-            <span class="text-gray-900 px-2 py-1 pr-2 rounded-md text-xs font-medium ml-1 border-2 border-green-500">
+        <div class="justify-between text-gray-900">
+            <span class="border-2 ml-1 rounded-md border-green-500 px-2 py-1 pr-2 text-xs font-medium text-gray-900">
                 @Model.StatusType.Name </span>
-            <span class="text-gray-900 px-2 py-1 border-2 rounded-md text-xs font-medium ml-1"
+            <span class="border-2 ml-1 rounded-md px-2 py-1 text-xs font-medium text-gray-900"
                   style="background-color:@GetEmploymentTypeColor(Model.EmploymentType.Name);">
                 @Model.EmploymentType.Name
             </span>   
@@ -36,16 +36,16 @@
     </div>
 
     <div class="text-lg font-bold">@Model.Salary</div>
-        <span class="font-semibold text-sm text-gray-700">Available Slots: @Model.AvailableSlots</span>
+        <span class="text-sm font-semibold text-gray-700">Available Slots: @Model.AvailableSlots</span>
 
-        <hr class=" border-gray-300" />
-        <h3 class="text-sm font-semibold text-gray-500 mb-3">Details</h3>
+        <hr class="border-gray-300" />
+        <h3 class="mb-3 text-sm font-semibold text-gray-500">Details</h3>
 
         <ul class="space-y-4 text-sm text-gray-700">
             <li class="gap-2">
                 <i class="fas fa-clock text-lg"></i>
                 <span class="pl-2 font-semibold">Schedule:</span>
-                <span>@Model.Schedule.Days, @Model.Schedule.Hours</span>
+                <span>@Model.Schedule</span>
             </li>
             <li class="gap-2">
                 <i class="fas fa-graduation-cap text-lg"></i>
@@ -54,21 +54,21 @@
             </li>
             <li class="gap-2">
                 <i class="fas fa-university text-lg"></i>
-                <span class="font-semibold pl-2">Departments:</span>
-                <div class=" pl-8">@string.Join(", ", (Model.Departments as List<Department>).Select(department => department.Name))</div>
+                <span class="pl-2 font-semibold">Departments:</span>
+                <div class="pl-8">@string.Join(", ", (Model.Departments as List<Department>).Select(department => department.Name))</div>
             </li>
         </ul>
 
         <hr class="border-gray-300" />
-        <h3 class="text-sm font-semibold text-gray-500 mb-3">Contact Information</h3>
+        <h3 class="mb-3 text-sm font-semibold text-gray-500">Contact Information</h3>
 
         <ul class="space-y-4 text-sm text-gray-700">
             <li class="flex pr-2">
-                <span class="font-semibold pr-2">Email: </span>
+                <span class="pr-2 font-semibold">Email: </span>
                 <span>@Model.Company.ContactEmail</span>
             </li>
             <li class="flex pr-2">
-                <span class="font-semibold pr-2">Phone: </span>
+                <span class="pr-2 font-semibold">Phone: </span>
                 <span>@Model.Company.ContactNumber</span>
             </li>
         </ul>
