--- a/WebApp/Views/Job/_EditJobModal.cshtml
+++ b/WebApp/Views/Job/_EditJobModal.cshtml
@@ -7,18 +7,18 @@
     var YearLevels = ViewBag.YearLevels as List<YearLevel>;
 }
 
-<div class="modal fade" id="createJobModal" tabindex="-1" role="dialog" aria-labelledby="createJobModalLabel" aria-hidden="true">
+<div class="modal fade" id="editJobModal" tabindex="-1" role="dialog" aria-labelledby="editJobModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="createJobModalLabel">Create Job</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closeCreateJobModal">
+                <h5 class="modal-title text-2xl font-bold text-[#7A1515]" id="editJobModalLabel">Edit Job</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closeEditJobModal">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
 
             <div class="modal-body max-h-[calc(96vh-200px)] flex-grow overflow-y-auto">
-                <form id="createJobForm" class="rounded-lg p-2">
+                <form id="editJobForm" class="rounded-lg p-2">
                     @Html.AntiForgeryToken()
                     <div class="space-y-6">
                         <!-- First Row: Job Title | Slots Available -->
@@ -26,7 +26,7 @@
                             <!-- Job Title -->
                             <div class="flex-1">
                                 <label asp-for="Title" class="block text-sm font-medium text-gray-700">Job Title</label>
-                                <input placeholder="Junior Software Developer" asp-for="Title" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" id="createJobTitle" name="Title" maxlength="100" />
+                                <input placeholder="Junior Software Developer" asp-for="Title" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" id="editJobTitle" name="Title" value="@Model.Title" maxlength="100" />
                                 <span asp-validation-for="Title" class="text-sm text-red-500"></span>
                                 <span id="remainingTitleChars" class="text-xs text-gray-500">100 characters remaining</span>
                             </div>
@@ -34,7 +34,7 @@
                             <!-- Slots Available -->
                             <div class="flex-1">
                                 <label asp-for="AvailableSlots" class="block text-sm font-medium text-gray-700"></label>
-                                <input asp-for="AvailableSlots" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" type="number" placeholder="30" id="createJobSlotsAvailable" name="AvailableSlots" />
+                                <input asp-for="AvailableSlots" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" type="number" value="@Model.AvailableSlots" placeholder="30" id="editJobSlotsAvailable" name="AvailableSlots" />
                                 <span asp-validation-for="AvailableSlots" class="text-sm text-red-500"></span>
                             </div>
                         </div>
@@ -43,7 +43,7 @@
                         <div>
                             <label asp-for="Description" class="block text-sm font-semibold text-gray-700">Description</label>
                             <textarea placeholder="Job description, benefits, etc. (make this field as descriptive as possible)" 
-                                asp-for="Description" class="block h-14 w-full rounded-lg border border-gray-300 p-2 text-sm" id="createJobDescription" name="Description" maxlength="800"></textarea>
+                                asp-for="Description" class="block h-14 w-full rounded-lg border border-gray-300 p-2 text-sm" id="editJobDescription" name="Description" maxlength="800">@Model.Description</textarea>
                             <span asp-validation-for="Description" class="text-sm text-red-500"></span>
                             <span id="remainingDescriptionChars" class="text-xs text-gray-500">800 characters remaining</span>
                         </div>
@@ -53,18 +53,18 @@
                             <!-- Location -->
                             <div class="flex-1">
                                 <label asp-for="Location" class="block text-sm font-medium text-gray-700">Location</label>
-                                <input placeholder="Cebu City, Cebu" asp-for="Location" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" id="createJobLocation" name="Location" />
+                                <input placeholder="Cebu City, Cebu" asp-for="Location" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" id="editJobLocation" name="Location" value="@Model.Location" />
                                 <span asp-validation-for="Location" class="text-sm text-red-500"></span>
                             </div>
 
                             <!-- Setup Type -->
                             <div class="flex-1">
                                 <label asp-for="SetupTypeId" class="block text-sm font-medium text-gray-700">Setup Type</label>
-                                <select asp-for="SetupTypeId" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" id="createJobSetupTypeId" name="SetupTypeId">
+                                <select asp-for="SetupTypeId" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" id="editJobSetupTypeId" name="SetupTypeId">
                                     <option value="">-- Select Setup Type --</option>
                                     @foreach (var setup in SetupTypes)
                                     {
-                                        <option value="@setup.SetupTypeId" title="@setup.Description">@setup.Name</option>
+                                        <option value="@setup.SetupTypeId" selected=@(Model.SetupTypeId == setup.SetupTypeId) title="@setup.Description">@setup.Name</option>
                                     }
                                 </select>
                                 <span asp-validation-for="SetupTypeId" class="text-sm text-red-500"></span>
@@ -79,16 +79,16 @@
                                 <div class="flex space-x-4">
                                     <div class="flex-1">
                                         <label asp-for="ScheduleDays" class="block text-xs font-medium text-gray-700"></label>
-                                        <input asp-for="ScheduleDays" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" type="number" placeholder="5" id="createJobScheduleDays" name="ScheduleDays" />
+                                        <input asp-for="ScheduleDays" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" type="number" value="@Model.ScheduleDays" placeholder="5" id="editJobScheduleDays" name="ScheduleDays" />
                                         <span asp-validation-for="ScheduleDays" class="text-sm text-red-500"></span>
                                     </div>
                                     <div class="flex-1">
                                         <label asp-for="ScheduleHours" class="block text-xs font-medium text-gray-700"></label>
-                                        <input asp-for="ScheduleHours" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" type="number" placeholder="40" id="createJobScheduleHours" name="ScheduleHours" />
+                                        <input asp-for="ScheduleHours" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" type="number" value="@Model.ScheduleHours" placeholder="40" id="editJobScheduleHours" name="ScheduleHours" />
                                         <span asp-validation-for="ScheduleHours" class="text-sm text-red-500"></span>
                                     </div>
                                 </div>
-                                <span class="text-xs text-[#7A1515]" id="createJobScheduleInfo">Input 0 for either days or hours if flexible.</span>
+                                <span class="text-xs text-[#7A1515]" id="editJobScheduleInfo">Input 0 for either days or hours if flexible.</span>
                             </div>
 
                             <!-- Salary -->
@@ -97,16 +97,16 @@
                                 <div class="flex space-x-4">
                                     <div class="flex-1">
                                         <label asp-for="SalaryLower" class="block text-xs font-medium text-gray-700"></label>
-                                        <input asp-for="SalaryLower" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" type="number" placeholder="30000" id="createJobSalaryLower" name="SalaryLower" />
+                                        <input asp-for="SalaryLower" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" type="number" value="@Model.SalaryLower" placeholder="30000" id="editJobSalaryLower" name="SalaryLower" />
                                         <span asp-validation-for="SalaryLower" class="text-sm text-red-500"></span>
                                     </div>
                                     <div class="flex-1">
                                         <label asp-for="SalaryUpper" class="block text-xs font-medium text-gray-700"></label>
-                                        <input asp-for="SalaryUpper" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" type="number" placeholder="45000" id="createJobSalaryUpper" name="SalaryUpper" />
+                                        <input asp-for="SalaryUpper" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" type="number" value="@Model.SalaryUpper" placeholder="45000" id="editJobSalaryUpper" name="SalaryUpper" />
                                         <span asp-validation-for="SalaryUpper" class="text-sm text-red-500"></span>
                                     </div>
                                 </div>
-                                <span class="text-xs text-[#7A1515]" id="createJobSalaryInfo">Input 0 for both lower and upper if unpaid.</span>
+                                <span class="text-xs text-[#7A1515]" id="editJobSalaryInfo">Input 0 for both lower and upper if unpaid.</span>
                             </div>
                         </div>
 
@@ -115,11 +115,11 @@
                             <!-- Employment Type -->
                             <div class="flex-1">
                                 <label asp-for="EmploymentTypeId" class="block text-sm font-medium text-gray-700"></label>
-                                <select asp-for="EmploymentTypeId" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" id="createJobEmploymentTypeId" name="EmploymentTypeId">
+                                <select asp-for="EmploymentTypeId" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" id="editJobEmploymentTypeId" name="EmploymentTypeId">
                                     <option value="">-- Select Employment Type --</option>
                                     @foreach (var type in EmploymentTypes)
                                     {
-                                        <option value="@type.EmploymentTypeId" title="@type.Description">@type.Name</option>
+                                        <option value="@type.EmploymentTypeId" selected=@(Model.EmploymentTypeId == type.EmploymentTypeId)>@type.Name</option>
                                     }
                                 </select>
                                 <span asp-validation-for="EmploymentTypeId" class="text-sm text-red-500"></span>
@@ -128,11 +128,11 @@
                             <!-- Year Level -->
                             <div class="flex-1">
                                 <label asp-for="YearLevelId" class="block text-sm font-medium text-gray-700"></label>
-                                <select asp-for="YearLevelId" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" id="createJobYearLevelId" name="YearLevelId">
+                                <select asp-for="YearLevelId" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" id="editJobYearLevelId" name="YearLevelId">
                                     <option value="">-- Select Year Level --</option>
                                     @foreach (var yearLevel in YearLevels)
                                     {
-                                        <option value="@yearLevel.YearLevelId">@yearLevel.Name</option>
+                                        <option value="@yearLevel.YearLevelId" selected=@(Model.YearLevelId == yearLevel.YearLevelId)>@yearLevel.Name</option>
                                     }
                                 </select>
                                 <span asp-validation-for="YearLevelId" class="text-sm text-red-500"></span>
@@ -144,7 +144,7 @@
                             <!-- Skills -->
                             <div class="flex-1">
                                 <label asp-for="Skills" class="block text-sm font-medium text-gray-700"></label>
-                                <input placeholder="C#, ASP.NET, Problem solving, Communication" type="text" id="createJobSkillsInput" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" />
+                                <input placeholder="C#, ASP.NET, Problem solving, Communication" type="text" id="editJobSkillsInput" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" />
                                 <div type="hidden" id="skillsHiddenInputs" name="Skills"></div>
                                 <span asp-validation-for="Skills" class="text-sm text-red-500" id="skillsValidation"></span>
                             </div>
@@ -152,18 +152,19 @@
                             <!-- Departments -->
                             <div class="flex-1">
                                 <label asp-for="Departments" class="block text-sm font-medium text-gray-700"></label>
-                                <input placeholder="Computer Science, Information Technology" type="text" id="createJobDepartmentsInput" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" />
+                                <input placeholder="Computer Science, Information Technology" type="text" id="editJobDepartmentsInput" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" />
                                 <div type="hidden" id="departmentsHiddenInputs" name="Departments"></div>
                                 <span asp-validation-for="Departments" class="text-sm text-red-500" id="departmentsValidation"></span>
                             </div>
                         </div>
                     </div>
+                    <input asp-for="JobId" type="hidden" value="@Model.JobId" />
                 </form>
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" id="cancelCreateJob" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A53D3D]" onclick="submitCreateJob()">Create</button>
+                <button type="button" class="rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" id="cancelEditJob" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A53D3D]" onclick="submitEditJob()">Save Changes</button>
             </div>
         </div>
     </div>
