--- a/WebApp/Views/Job/_JobTableBody.cshtml
+++ b/WebApp/Views/Job/_JobTableBody.cshtml
@@ -15,7 +15,7 @@
 
     bool noResult = string.IsNullOrEmpty(search) && 
         string.IsNullOrEmpty(filterByCompany) && 
-        string.IsNullOrEmpty(filterByEmploymentType) && 
+        string.IsNullOrEmpty(filterByEmploymentType) &&
         string.IsNullOrEmpty(filterByStatusType) && 
         string.IsNullOrEmpty(filterByWorkSetup);
 }
@@ -46,34 +46,54 @@ else
             <td class="px-6 py-3 text-sm text-gray-700">@Html.DisplayFor(modelItem => item.StatusType.Name)</td>
             <td class="px-6 py-3 text-sm text-gray-700">@Html.DisplayFor(modelItem => item.SetupType.Name)</td>
             <td class="px-6 py-3 text-sm text-gray-700">@Html.DisplayFor(modelItem => item.CreatedDate)</td>
-            <td class="pl-6 py-3 text-left">
+            <td class="py-3 pl-6 text-left">
                 <div class="relative">
                     <!-- Dropdown Button -->
                     <button data-jobid="@item.JobId"
-                            class="actionDropdownJobBtn cursor-pointer text-black hover:text-[#A53D3D] focus:outline-none px-6">
+                            class="actionDropdownJobBtn cursor-pointer px-6 text-black hover:text-[#A53D3D] focus:outline-none">
                         <i class="fas fa-ellipsis-v"></i>
                     </button>
 
                     <div id="actionDropdownJobMenu-@item.JobId"
-                         class="actionDropdownJobMenu z-10 ring-1 ring-opacity-5 absolute right-0 mt-2 hidden w-48 origin-top-right
-                                rounded-md bg-white text-left shadow-lg ring-black">
+                         class="actionDropdownJobMenu z-10 ring-1 ring-opacity-5 absolute right-0 mt-2 hidden w-48 origin-top-right rounded-md bg-white text-left shadow-lg ring-black">
                         <div class="space-y-1 py-1">
 
                             <!-- Job Details -->
-                            <button onclick="location.href='@Url.Action("GetJob", "Job", new { id = item.JobId })'"
-                                    class="w-full text-left px-4 py-2 text-sm cursor-pointer text-grey-700 hover:text-[#A53D3D] focus:outline-none">
+                            <button onclick="location.href='@Url.Action("GetJob", "Job", 
+                                    new { 
+                                        id = item.JobId, 
+                                        sortBy = sortBy, 
+                                        search = search, 
+                                        pageIndex = Model.PageIndex ,
+                                        filterByStatusType = filterByStatusType,
+                                        filterByWorkSetup = filterByWorkSetup,
+                                        filterByEmploymentType = filterByEmploymentType,
+                                        filterByCompany = filterByCompany
+                                    })'"
+                                    class="text-grey-700 w-full cursor-pointer px-4 py-2 text-left text-sm hover:text-[#A53D3D] focus:outline-none">
                                 <i class="fas fa-info-circle mr-2"></i> Job Details
                             </button>
 
                             <!-- Edit Job -->
-                            <button onclick="location.href='@Url.Action("GetJob", "Job", new { id = item.JobId })'"
-                                    class="w-full text-left px-4 py-2 text-sm cursor-pointer text-grey-700 hover:text-[#A53D3D] focus:outline-none">
+                            <button onclick="location.href='@Url.Action("GetJob", "Job", 
+                                    new { 
+                                        id = item.JobId,
+                                        sortBy = sortBy,
+                                        search = search,
+                                        pageIndex = Model.PageIndex ,
+                                        filterByStatusType = filterByStatusType,
+                                        filterByWorkSetup = filterByWorkSetup,
+                                        filterByEmploymentType = filterByEmploymentType,
+                                        filterByCompany = filterByCompany,
+                                        showModal = "editJob" 
+                                    })'"
+                                    class="text-grey-700 w-full cursor-pointer px-4 py-2 text-left text-sm hover:text-[#A53D3D] focus:outline-none">
                                 <i class="fas fa-edit -circle mr-2"></i> Edit Job Info
                             </button>
 
                             <!-- Archive Job -->
                             <button onclick=" displayDeleteModal('@item.JobId' , '@item.PostedBy)"
-                                    class="w-full text-left px-4 py-2 text-sm cursor-pointer text-grey-700 hover:text-[#A53D3D] focus:outline-none">
+                                    class="text-grey-700 w-full cursor-pointer px-4 py-2 text-left text-sm hover:text-[#A53D3D] focus:outline-none">
                                 <i class="fas fa-info-circle mr-2"></i> Archive Chat
                             </button>
                         </div>
