--- a/WebApp/Views/Company/ViewCompany.cshtml
+++ b/WebApp/Views/Company/ViewCompany.cshtml
@@ -9,82 +9,96 @@
 }
 
 @Html.AntiForgeryToken()
-<div class="container mx-auto p-4">
-    <div class="mb-4 rounded bg-white px-5 py-4 shadow-md">
-        <div class="grid-cols-1 grid gap-4 md:grid-cols-2">
-            <!-- Company Details Section -->
-            <div>
-                <div class="mb-4 flex items-center">
-                    <!-- Back Button -->
-                    <a href="#" class="back-button mr-4 text-black">
-                        <h2 class="font-bold">
-                            <i class="fa-solid fa-arrow-left mx-2"></i>
-                        </h2>
-                    </a>
 
-                    <!-- Title and Edit Icon Container -->
-                    <div class="flex items-center">
-                        <h4 class="text-xl font-semibold">Company Details 
-                            @if (User.IsInRole("NLO"))
-                            {
-                                <a href="javascript:void(0);" onclick="enableEditMode()" class="fas fa-edit ml-2 text-[#7A1515] hover:text-[#A53D3D]"></a>
-                            }
-                        </h4>
-                    </div>
+<div class="min-h-screen bg-[#F5F7F8]">
+    <div class="flex items-center justify-center p-4">
+        <div class="w-full max-w-7xl space-y-4 rounded-lg bg-white p-6 shadow-md">
+            <!-- Header Section -->
+            <div class="flex items-center">
+                <div class="flex items-center">
+                    <!-- Back Button -->
+                    <a href="#" class="back-button mr-4 text-black hover:text-gray-700">
+                        <i class="fa-solid fa-arrow-left text-xl"></i>
+                    </a>
+                    <h1 class="mr-2 text-3xl font-bold text-[#7A1515]">Company Details</h1>
                 </div>
-                <div class="text-red-500">
+                @if (User.IsInRole("NLO"))
+                {
+                    <a href="javascript:void(0);" onclick="enableEditMode()" class="fas fa-edit ml-2 text-[#7A1515] hover:text-[#A53D3D]"></a>
+                }
+            </div>
+
+            <!-- Company Details Form -->
+            <form id="editCompanyForm" class="space-y-4">
+                <!-- Validation Summary -->
+                <div class="mb-4 text-red-500">
                     <div asp-validation-summary="ModelOnly"></div>
                 </div>
-                <form id="editCompanyForm">
-                    <input type="hidden" name="CompanyId" id="companyId" value="@Model.CompanyId" />
-                    <div class="mb-4">
-                        <label asp-for="Name" class="mb-2 block text-sm font-bold text-gray-700"></label>
-                        <input asp-for="Name" id="companyName" value="@Model.Name" class="w-full cursor-not-allowed rounded border bg-gray-100 px-3 py-2 leading-tight text-gray-500" readonly />
-                        <span asp-validation-for="Name" class="mt-1 block text-sm text-red-500"></span>
-                    </div>
-                    <div class="mb-4 flex space-x-4">
-                        <div class="w-1/2">
-                            <label asp-for="ContactEmail" class="mb-2 block text-sm font-bold text-gray-700"></label>
-                            <input asp-for="ContactEmail" id="companyEmail" value="@Model.ContactEmail" class="w-full cursor-not-allowed rounded border bg-gray-100 px-3 py-2 leading-tight text-gray-500" readonly />
-                            <span asp-validation-for="ContactEmail" class="mt-1 block text-sm text-red-500"></span>
-                        </div>
-                        <div class="w-1/2">
-                            <label asp-for="ContactNumber" class="mb-2 block text-sm font-bold text-gray-700"></label>
-                            <input asp-for="ContactNumber" id="companyNumber" value="@Model.ContactNumber" class="w-full cursor-not-allowed rounded border bg-gray-100 px-3 py-2 leading-tight text-gray-500" readonly />
-                            <span asp-validation-for="ContactNumber" class="mt-1 block text-sm text-red-500"></span>
-                        </div>
-                    </div>
-                    <div class="mb-4">
-                        <label asp-for="Address" class="mb-2 block text-sm font-bold text-gray-700"></label>
-                        <input asp-for ="Address" id="companyAddress" value="@Model.Address" class="w-full cursor-not-allowed rounded border bg-gray-100 px-3 py-2 leading-tight text-gray-500" readonly />
-                        <span asp-validation-for="Address" class="mt-1 block text-sm text-red-500"></span>
-                    </div>
-                    <div class="mb-4">
-                        <label asp-for="Description" class="mb-2 block text-sm font-bold text-gray-700"></label>
-                        <textarea asp-for="Description" id="companyDescription" class="w-full cursor-not-allowed rounded border bg-gray-100 px-3 py-2 leading-tight text-gray-500" readonly>@(string.IsNullOrEmpty(Model.Description) ? "No description." : Model.Description)</textarea>
-                        <span asp-validation-for="Description" class="mt-1 block text-sm text-red-500"></span>
-                    </div>
-                </form>
 
-                <!-- Save and Cancel Buttons -->
-                <div id="editButtons" class="hidden pb-5">
+                <input type="hidden" name="CompanyId" id="companyId" value="@Model.CompanyId" />
+
+                <!-- Company Name -->
+                <div>
+                    <label asp-for="Name" class="block text-sm font-bold text-gray-700">Company Name</label>
+                    <input asp-for="Name" id="companyName" value="@Model.Name" class="w-full cursor-not-allowed rounded border bg-gray-100 px-3 py-2 text-gray-500" readonly />
+                    <span asp-validation-for="Name" class="mt-1 block text-sm text-red-500"></span>
+                </div>
+
+                <!-- Contact Information -->
+                <div class="flex flex-col space-x-4 md:flex-row md:space-x-4">
+                    <!-- Contact Email -->
+                    <div class="flex-1">
+                        <label asp-for="ContactEmail" class="block text-sm font-bold text-gray-700">Contact Email</label>
+                        <input asp-for="ContactEmail" id="companyEmail" value="@Model.ContactEmail" class="w-full cursor-not-allowed rounded border bg-gray-100 px-3 py-2 text-gray-500" readonly />
+                        <span asp-validation-for="ContactEmail" class="mt-1 block text-sm text-red-500"></span>
+                    </div>
+                    <!-- Contact Number -->
+                    <div class="flex-1">
+                        <label asp-for="ContactNumber" class="block text-sm font-bold text-gray-700">Contact Number</label>
+                        <input asp-for="ContactNumber" id="companyNumber" value="@Model.ContactNumber" class="w-full cursor-not-allowed rounded border bg-gray-100 px-3 py-2 text-gray-500" readonly />
+                        <span asp-validation-for="ContactNumber" class="mt-1 block text-sm text-red-500"></span>
+                    </div>
+                </div>
+
+                <!-- Address -->
+                <div>
+                    <label asp-for="Address" class="block text-sm font-bold text-gray-700">Address</label>
+                    <input asp-for="Address" id="companyAddress" value="@Model.Address" class="w-full cursor-not-allowed rounded border bg-gray-100 px-3 py-2 text-gray-500" readonly />
+                    <span asp-validation-for="Address" class="mt-1 block text-sm text-red-500"></span>
+                </div>
+
+                <!-- Description -->
+                <div>
+                    <label asp-for="Description" class="block text-sm font-bold text-gray-700">Description</label>
+                    <textarea asp-for="Description" id="companyDescription" class="w-full cursor-not-allowed rounded border bg-gray-100 px-3 py-2 text-gray-500" readonly>@(string.IsNullOrEmpty(Model.Description) ? "No description." : Model.Description)</textarea>
+                    <span asp-validation-for="Description" class="mt-1 block text-sm text-red-500"></span>
+                </div>
+
+                <!-- Action Buttons -->
+                <div id="editButtons" class="hidden space-x-2">
                     <button type="button" class="rounded bg-gray-500 px-4 py-2 font-semibold text-white hover:bg-gray-600" onclick="cancelEdit()">Cancel</button>
                     <button type="button" class="rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]" onclick="submitChanges()">Save Changes</button>
                 </div>
-            </div>
+            </form>
 
-            <!-- Recruiters Section -->
             @if (User.IsInRole("NLO"))
             {
-                <div>
-                    @await Html.PartialAsync("_RecruiterSection", Model)
-                </div>
+                <!-- Recruiters Section -->
+                @await Html.PartialAsync("_RecruiterSection", Model)
+
+                <!-- Jobs Section -->
+                @await Html.PartialAsync("_JobSection", Model)
             }
         </div>
     </div>
 </div>
 
+<!-- Hidden Data for JavaScript -->
 <div id="tempDataContainer" data-success="@TempData["SuccessMessage"]" data-error="@TempData["ErrorMessage"]"></div>
+<input type="hidden" id="baseUrl" value="@Url.Action("GetAllCompanies", "Company")" />
+<input type="hidden" id="resetUrl" value="@Url.Action("ResetPassword", "Company")" />
+<input type="hidden" id="deleteUrl" value="@Url.Action("Delete", "Company")" />
+
 @section Scripts {
     <script src="~/js/company.js"></script>
     <script>
