--- a/WebApp/Views/Company/_JobSection.cshtml
+++ b/WebApp/Views/Company/_JobSection.cshtml
@@ -1,33 +1,33 @@
 ﻿@model Services.ServiceModels.CompanyViewModel
 
 <div class="max-h-80 overflow-y-auto rounded border bg-gray-50 p-4">
-    <!-- Header: Title and Add Recruiter Button -->
+    <!-- Header: Title and Add Job Button -->
     <div class="flex items-center justify-between pb-2">
-        <h4 class="text-xl font-semibold">Recruiters</h4>
+        <h4 class="text-xl font-semibold">Jobs</h4>
         <button class="flex items-center rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#A53D3D]"
-                onclick="">
+                onclick="displayAddJobModal('@Model.CompanyId')">
             <i class="fa fa-plus mr-2"></i>
-            Add Recruiter
+            Add Job
         </button>
     </div>
 
     <!-- Search Input -->
     <div class="mb-4">
         <input type="text"
-               id="recruiterSearch"
+               id="jobSearch"
                class="w-full rounded border px-3 py-2 leading-tight text-gray-700 shadow focus:outline-none focus:shadow-outline"
-               placeholder="Search recruiters by name or email..."
-               oninput="filterRecruiters()" />
+               placeholder="Search jobs by title or description..."
+               oninput="filterJobs()" />
     </div>
 
-    <!-- Recruiters Table -->
+    <!-- Jobs Table -->
     <table class="min-w-full bg-white">
         <thead class="sticky top-0 bg-gray-100">
             <tr>
-                <th class="border-b-2 border-gray-300 px-6 py-3 text-left uppercase tracking-wider text-gray-600">Name</th>
-                <th class="border-b-2 border-gray-300 px-6 py-3 text-left uppercase tracking-wider text-gray-600">Email</th>
-                <th class="border-b-2 border-gray-300 px-6 py-3 text-left uppercase tracking-wider text-gray-600">Active Listings</th>
-                <th class="border-b-2 border-gray-300 px-6 py-3 text-left uppercase tracking-wider text-gray-600">Inactive Listings</th>
+                <th class="border-b-2 border-gray-300 px-6 py-3 text-left uppercase tracking-wider text-gray-600">Title</th>
+                <th class="border-b-2 border-gray-300 px-6 py-3 text-left uppercase tracking-wider text-gray-600">Description</th>
+                <th class="border-b-2 border-gray-300 px-6 py-3 text-left uppercase tracking-wider text-gray-600">Open Slots</th>
+                <th class="border-b-2 border-gray-300 px-6 py-3 text-left uppercase tracking-wider text-gray-600">Status</th>
                 <th class="border-b-2 border-gray-300 px-6 py-3 text-left uppercase tracking-wider text-gray-600">Action</th>
             </tr>
         </thead>
@@ -35,39 +35,39 @@
             @if (!Model.Recruiters.Any())
             {
                 <tr>
-                    <td colspan="5" class="px-6 py-4 text-center text-red-500">No Recruiters in Company</td>
+                    <td colspan="4" class="px-6 py-4 text-center text-red-500">No Jobs Available</td>
                 </tr>
             }
             else
             {
-                @foreach (var recruiter in Model.Recruiters)
+                @foreach (var job in Model.Recruiters)
                 {
                     <tr class="border-b bg-white hover:bg-gray-50">
                         <td class="whitespace-nowrap px-6 py-4">
                             <a href="#" class="hover:underline">
-                                @recruiter.User.FirstName @recruiter.User.MiddleName @recruiter.User.LastName @recruiter.User.Suffix
+                                @job.Title
                             </a>
                         </td>
                         <td class="whitespace-nowrap px-6 py-4 text-gray-700">
-                            @Html.DisplayFor(modelItem => recruiter.User.Email)
+                            @job.Title
                         </td>
                         <td class="whitespace-nowrap px-6 py-4 text-gray-700">
-                            @recruiter.Jobs.Count(j => !j.IsArchived)
+                            <span class="text-green-600">Active</span>
                         </td>
                         <td class="whitespace-nowrap px-6 py-4 text-gray-700">
-                            @recruiter.Jobs.Count(j => j.IsArchived)
+                            <span class="text-green-600">Active</span>
                         </td>
                         <td class="whitespace-nowrap px-6 py-4">
-                            <a title="Message"
+                            <a title="Edit"
                                href="javascript:void(0);"
-                               onclick="messageRecruiter('@recruiter.UserId')">
-                                <i class="fa fa-commenting"></i>
+                               onclick="">
+                                <i class="fas fa-edit"></i>
                             </a>
                             <span class="px-2 text-gray-400">|</span>
-                            <a title="Reassign"
+                            <a title="Delete"
                                href="javascript:void(0);"
-                               onclick="displayReassignRecruiterModal('@Model.CompanyId', '@recruiter.UserId')">
-                                <i class="fa-solid fa-share"></i>
+                               onclick="">
+                                <i class="fas fa-trash"></i>
                             </a>
                         </td>
                     </tr>
